2006-01-30  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JLayeredPane/addImp.java
	New test.

2005-01-29  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/Double/DoubleSetterTest.java: Cleaned up
	test name containing "Error".

2005-01-29  Edwin Steiner  <edwin.steiner@gmx.net>

	* gnu/testlet/java/lang/Byte/ByteTest.java,
	gnu/testlet/java/lang/Character/CharacterTest.java,
	gnu/testlet/java/lang/Double/DoubleTest.java,
	gnu/testlet/java/lang/Float/FloatTest.java,
	gnu/testlet/java/lang/Integer/IntegerTest.java,
	gnu/testlet/java/lang/Long/LongTest.java,
	gnu/testlet/java/lang/Math/MathTest.java,
	gnu/testlet/java/lang/Short/ShortTest.java,
	gnu/testlet/java/lang/String/StringTest.java,
	gnu/testlet/java/lang/StringBuffer/StringBufferTest.java:
	Cleaned up test names containing "Error", "failed", or
	"returned wrong results".

2006-01-29  Olivier Jolly  <olivier.jolly@pcedev.com>

	* gnu/testlet/java/lang/Double/DoubleSetterTest.java: New test which
	makes sure that unwrapping of new Double(Double.MAX_VALUE) in
	Method.invoke works correctly.

2006-01-29  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/ScrollPaneLayout/minimumLayoutSize.java:
	New test.

2006-01-30  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/java/security/util/TestOfPrime2.java: New file.
	Fixed Copyright holder.

2006-01-29  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/javax/crypto: Moved to gnu/testlet/gnu/javax/crypto.
	* gnu/testlet/java/security/sig:
	Moved to gnu/testlet/gnu/java/security/sig.
	* gnu/testlet/java/security/key.java:
	Moved to gnu/testlet/gnu/java/security/key.
	* gnu/testlet/java/security/jce:
	Moved to gnu/testlet/gnu/java/security/jce.
	* gnu/testlet/java/security/hash:
	Moved to gnu/testlet/gnu/java/security/hash.

2006-01-28  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/event/SwingPropertyChangeSupport/hasListeners.java
	(test): Corrected test for null argument,